--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Typing Test</h1>
+    <div id="text-container">This is our text</div>
+    <div id="timer">Time left: 60s</div>
+    <div id="final-score"></div>
+    <button type="button" id="try-again">Try Again</button>
     <script src="script.js"></script>
   </body>
 </html>
